crates/general/fixtures/invalid/local_binding_double_colon.zt
[ x :: Int = 1; x ]
